Fix CSS styling in main.css, profile-mode.css, and reset.css

--- a/assets/css/common/profile-mode.css
+++ b/assets/css/common/profile-mode.css
@@ -23,6 +23,14 @@
     border-radius: 50%;
 }
 
+.profile-summary {
+    text-align: justify;
+}
+
+body.dark .profile-summary strong {
+    font-weight: 900;
+}
+
 .buttons {
     flex-wrap: wrap;
     max-width: 400px;
