--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -35,26 +35,25 @@
         <div class="profile-summary">
             {{ .summary | markdownify }}
         </div>
-        {{- partial "social_icons.html" -}}
-
-        {{- with .buttons }}
+        {{- if .showButtons }}
         <div class="buttons">
-            {{- range . }}
+            {{- range site.Params.buttons }}
             <a class="button" href="{{ trim .url " " }}" rel="noopener" title="{{ .name }}">
                 <span class="button-inner">
                     {{ .name }}
                     {{- if (findRE "://" .url) }}&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
-                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
-                        <path d="M15 3h6v6"></path>
-                        <path d="M10 14L21 3"></path>
-                    </svg>
-                    {{- end }}
-                </span>
-            </a>
-            {{- end }}
-        </div>
+                    stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
+                    <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                    <path d="M15 3h6v6"></path>
+                    <path d="M10 14L21 3"></path>
+                </svg>
+                {{- end }}
+            </span>
+        </a>
+        {{- end }}
+        {{- partial "social_icons.html" -}}
+    </div>
         {{- end }}
     </div>
     {{- end}}
