Add umami event tracking to header, index_profile, and social_icons partials

--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -38,7 +38,7 @@
         {{- if .showButtons }}
         <div class="buttons">
             {{- range site.Params.buttons }}
-            <a class="button" href="{{ trim .url " " }}" rel="noopener" title="{{ .name }}">
+            <a class="button" href="{{ trim .url " " }}" rel="noopener" title="{{ .name }}" data-umami-event='{{ printf "%s-button" .name }}'>
                 <span class="button-inner">
                     {{ .name }}
                     {{- if (findRE "://" .url) }}&nbsp;
